# quartodoc-test

./: get_started.html  index.html  objects.json  pyproject.toml  search.json
.github/workflows/: ci.yml
docs/: _quarto.yml  get_started.qmd  index.qmd
mathops/: __init__.py  math_operations.py  string_operations.py
reference/: index.html  math_operations.html  string_operations.html
